--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
+# dependencies
 node_modules
+.pnp
+.pnp.js
+
+# misc
+.DS_Store
+.idea
+*.pem
 .vscode
+
+#debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# others
+.output
+lib/
+dist
