--- a/packages/esui/frameworks/vue/tsconfig.json
+++ b/packages/esui/frameworks/vue/tsconfig.json
@@ -15,7 +15,10 @@
     "baseUrl": ".",
     "types": [
       "vite/client",
-    ]
+    ],
+    "paths": {
+      "@eshop-ui/vue": ["./index.ts"]
+    }
   },
   "include": [
     "**/*.ts", 
